examples/compiler_errors/adversarial/common_dev_mistakes/UnknownEffectTypo.flx
module UnknownEffectTypo {
    fn bad() -> Unit with I {
    }
}
